v1.0.9a -
* Bug fixes
    - Fixed a bug that caused the giveitem command to crash when the object to
    give was reduced to a single letter
/newline/
v1.0.9 -
Modified:
* Callbacks:
	- MC_PRE_PLAYERHUD_TRINKET_RENDER: now provides [Vector] CropOffset parameter and accepts CropOffset vector in the return table.
* EntityPlayer:
	- AddInnateCollectible() now uses a system separate from item wisps, still doesn't save on game exit though!
	- Change to HasCollectible and GetCollectibleNum:
		new optional boolean (IgnoreSpoof), ignores collectible block when set to true
* Game:
	- ShowGenericLeaderboard no longer fades to main menu
* PersistentGameData:
	- TryUnlock now accepts an optional boolean to prevent popping up with the achievement paper for modded achievements
/newline/
Additions:
* Game:
	- SetDizzyAmount(amount, intensity)
	- GetDizzyAmount()
* PlayerManager:
	- AnyPlayerTypeHasTrinket(PlayerType, TrinketType, IgnoreModifiers = false)
	- AnyPlayerTypeHasCollectible(PlayerType, CollectibleType, IgnoreModifiers = false)
* Lootlist:
	- constructor
	- PushEntry(Type, Variant, SubType, Seed = Random(), RNG = nil)
	- GetEntries
* LootListEntry:
	- [Get]Type/Variant/SubType/Seed/RNG
* EntityPlayer:
	- Get/SetBombPlaceDelay
	- Get/SetBloodLustCounter
	- GetSpoofedCollectiblesList
	- New functionality for blocking items:
		BlockCollectible(int itemID)
		UnblockCollectible(int itemID)
		IsCollectibleBlocked(int itemID)
	- HasGoldenTrinket
	- Get/SetHallowedGroundCountdown
	- HasChanceRevive - Returns true if a "?" would be displayed on the player's extra life count (ie, Guppy's Collar)
* EntityTear:
	- GetTearHaloSprite
	- GetTearEffectSprite
	- GetDeadEyeSprite
	- ResetSpriteScale(bool Force) - New optional "force" boolean, when set to true forces the tear to re-evaluate which scale animation it should be playing
* EntityPickup:
	- GetLootList(ShouldAdvance = false)
	- GetPickupGhost
	- UpdatePickupGhosts
* EntityNPC:
	- GetFireplaceLoot
	- GetShopkeeperLoot