@@ -1,4 +1,8 @@
 v1.0.9a -
+Additions:
+* Game:
+	- GetShopVisits(): int
+	- AddShopVisits(count: int): void
 * Bug fixes
     - Fixed a bug that caused the giveitem command to crash when the object to
     give was reduced to a single letter
